--- a/surabaya/index.html
+++ b/surabaya/index.html
@@ -1,11 +1,11 @@
 <h1 class="graf graf--p">Obat Perontok Bulu di Apotik Surabaya</h1>
-<p class="graf graf--p"><img src="https://i.ibb.co/bW2nPRM/1.png" alt="" width="500" height="500" /></p>
+<p class="graf graf--p"><img src="https://i.ibb.co/bW2nPRM/1.png" alt=""style="width:100%"/></p>
 <p class="graf graf--p">Kita punya bulu tubuh dimana tebal? Apa anda memang gemar ataupun bulu tersebut sungguh-sungguh semakin kaga terkontrol. Kini saatnya kalian tampil makin seksi dengan miss v yang halus.</p>
 <p class="graf graf--p">Kami perkenalkan Perontok Bulu di Apotik Surabaya yang datang di Indonesia. Brand itu maka akan jadi metode bagi kalian yang kepingin membersihkan bulu di ketiak dengan aman.</p>
 <p class="graf graf--p"><a href="https://linktr.ee/officialligero" target="_blank" rel="noopener"><strong>Order langsung klik https://linktr.ee/officialligero</strong></a></p>
 <p class="graf graf--p">Bagi kita yang merasakan galau serta tak percaya diri oleh bulu pubis yang tetap tebal, oleh sebab itu kamu diharuskan mengerti teknik hilangkan bulu di kaki dengan permanen lalu tidak sebabkan rasa sakit.</p>
 <p class="graf graf--p">Anda kaga patut cabut / shaving bulu-bulu malahan gunakan waxing dan lazer yang menyakitkan. Hanya gunakan tips rontokkan bulu di tangan dengan efektif Ligero Hair Remover yang beguna tuk trik bersihkan bulu di tubuh dengan ampuh yang tak dihendaki.</p>
-<p class="graf graf--p"><img src="https://i.ibb.co/N9Pf7rc/2.png" alt="" width="500" height="500" /></p>
+<p class="graf graf--p"><img src="https://i.ibb.co/N9Pf7rc/2.png" alt="" style="width:100%" /></p>
 <h3 class="graf graf--h3">Berikut product Perontok Bulu di Apotik Surabaya di Indonesia</h3>
 <p class="graf graf--p">Ligero Hair Remover yaitu Perontok Bulu di Apotik Surabaya dalam berwujud cair bisa bekerja mujarab basmi bulu di kemaluan dengan tanpa sakit pria maupun wanita dengan mulus serta ekspress secara permanen. Perontok Bulu di Apotik Surabaya Ligero telah pasti manfaatnya amat cepat membasmi semua bentuk bulu kaki.</p>
 <p class="graf graf--p">Hanya 2&ndash;5 menit bulu selalu rontok serta mengakibatkan kulit menjadi bersih, halus, bebas dari rambut dan bulu tanpa sebabkan iritasi. Pergunakan Perontok Bulu di Apotik Surabaya Ligero secara rajin buat memperoleh hasil permanen. Hasil Ligero Hair Remover gak usah diragukan lagi, membasmi bulu di miss v dengan tanpa efek samping brand ini pun menghaluskan kulit yang sesudah dirontokan bulunya.</p>
@@ -18,7 +18,7 @@
 <li class="graf graf--li">Dapat untuk area ketiak, tangan, kaki dan kemaluan</li>
 <li class="graf graf--li">Metode membersihkan bulu di badan dengan mujarab</li>
 </ul>
-<p><img src="https://i.ibb.co/RTKJvW0/Poster2.png" alt="" width="500" height="500" /></p>
+<p><img src="https://i.ibb.co/RTKJvW0/Poster2.png" alt="" style="width:100%" /></p>
 <h4 class="graf graf--h4">Alasan Mengapa Kamu Diharuskan Order kemudian Gunakan Ligero Hair Remover&nbsp;Perontok Bulu di Apotik Surabaya</h4>
 <ul class="postList">
 <li class="graf graf--li">Product tetap ada bakal di kirim hari yang sama</li>
