--- a/surabaya/index.html
+++ b/surabaya/index.html
@@ -1,4 +1,12 @@
-<h1 class="graf graf--p">Obat Perontok Bulu di Apotik Surabaya</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Obat Perontok Bulu di Apotik Surabaya - Ligero</title>
+</head>
+<body>
+    <h1 class="graf graf--p">Obat Perontok Bulu di Apotik Surabaya</h1>
 <p class="graf graf--p"><img src="https://i.ibb.co/bW2nPRM/1.png" alt=""style="width:100%"/></p>
 <p class="graf graf--p">Kita punya bulu tubuh dimana tebal? Apa anda memang gemar ataupun bulu tersebut sungguh-sungguh semakin kaga terkontrol. Kini saatnya kalian tampil makin seksi dengan miss v yang halus.</p>
 <p class="graf graf--p">Kami perkenalkan Perontok Bulu di Apotik Surabaya yang datang di Indonesia. Brand itu maka akan jadi metode bagi kalian yang kepingin membersihkan bulu di ketiak dengan aman.</p>
@@ -30,3 +38,6 @@
 <h4 class="graf graf--h4">Gak usah buat dirimu kian lama kian malu dan tidak percaya sendiri ORDER Ligero Hair Remover Perontok Bulu di Apotik Surabaya SAAT INI <a href="https://linktr.ee/officialligero" target="_blank" rel="noopener"><strong>Order langsung klik https://linktr.ee/officialligero</strong></a></h4>
 <p class="graf graf--p graf--empty">&nbsp;</p>
 <p class="graf graf--p graf--empty">&nbsp;</p>
+
+</body>
+</html>
