--- a/jakarta-selatan/index.html
+++ b/jakarta-selatan/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 <body>
-    <div class="contaner">
+    <div class="container">
         <h1 class="graf graf--p">Obat Perontok Bulu di Apotik Surabaya</h1>
 <p class="graf graf--p"><img src="https://i.ibb.co/bW2nPRM/1.png" alt=""style="width:100%"/></p>
 <p class="graf graf--p">Kita punya bulu tubuh dimana tebal? Apa anda memang gemar ataupun bulu tersebut sungguh-sungguh semakin kaga terkontrol. Kini saatnya kalian tampil makin seksi dengan miss v yang halus.</p>
